Super simple react app (pure HTML + JS)
Thanks to Facebook:
https://facebook.github.io/react/docs/getting-started.html

--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/cooperka/react-simple-boilerplate/issues"
   },
-  "homepage": "https://github.com/cooperka/react-simple-boilerplate#readme"
+  "homepage": "https://github.com/cooperka/react-simple-boilerplate#readme",
+  "devDependencies": {
+    "react": "^0.14.2",
+    "react-dom": "^0.14.2"
+  }
 }
