--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
   },
   "homepage": "https://github.com/cooperka/react-simple-boilerplate#readme",
   "devDependencies": {
+    "babel-core": "^6.1.2",
+    "babel-loader": "^6.0.1",
+    "babel-preset-es2015": "^6.1.2",
+    "babel-preset-react": "^6.1.2",
     "react": "^0.14.2",
     "react-dom": "^0.14.2",
     "webpack": "^1.12.3"
