--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-simple-boilerplate",
   "version": "0.0.1",
   "description": "Boilerplate repo for starting ReactJS apps. Mostly for personal use and sandboxing.",
-  "main": "index.js",
+  "main": "src/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
