--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Boilerplate repo for starting ReactJS apps. Mostly for personal use and sandboxing.",
   "main": "src/app.js",
   "scripts": {
+    "build": "webpack --progress --colors",
+    "start": "webpack-dev-server --progress --colors --content-base public",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,6 +25,7 @@
     "babel-preset-react": "^6.1.2",
     "react": "^0.14.2",
     "react-dom": "^0.14.2",
-    "webpack": "^1.12.3"
+    "webpack": "^1.12.3",
+    "webpack-dev-server": "^1.12.1"
   }
 }
