--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^0.14.2",
     "react-dom": "^0.14.2",
     "webpack": "^1.12.3",
-    "webpack-dev-server": "^1.12.1"
+    "webpack-dev-server": "^1.12.1",
+    "webpack-hot-middleware": "^2.4.1"
   }
 }
