--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Boilerplate repo for starting ReactJS apps. Mostly for personal use and sandboxing.",
   "main": "src/app.js",
   "scripts": {
+    "lint": "eslint -c .eslintrc public src --ext .js,.jsx",
     "build": "webpack --progress --colors",
     "start": "webpack-dev-server --progress --colors --content-base public",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -20,9 +21,13 @@
   "homepage": "https://github.com/cooperka/react-simple-boilerplate#readme",
   "devDependencies": {
     "babel-core": "^6.1.2",
+    "babel-eslint": "^4.1.4",
     "babel-loader": "^6.0.1",
     "babel-preset-es2015": "^6.1.2",
     "babel-preset-react": "^6.1.2",
+    "eslint": "^1.9.0",
+    "eslint-config-airbnb": "^1.0.0",
+    "eslint-plugin-react": "^3.8.0",
     "react": "^0.14.2",
     "react-dom": "^0.14.2",
     "webpack": "^1.12.3",
