--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "eslint": "^1.9.0",
     "eslint-config-airbnb": "^1.0.0",
     "eslint-plugin-react": "^3.8.0",
+    "node-sass": "^3.4.1",
     "react": "^0.14.2",
     "react-dom": "^0.14.2",
+    "sass-loader": "^3.1.1",
     "webpack": "^1.12.3",
     "webpack-dev-server": "^1.12.1",
     "webpack-hot-middleware": "^2.4.1"
