--- a/package.json
+++ b/package.json
@@ -7,7 +7,20 @@
     "lint": "eslint -c .eslintrc public src --ext .js,.jsx",
     "build": "webpack --progress --colors",
     "start": "webpack-dev-server --progress --colors --content-base public",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watch"
+  },
+  "jest": {
+    "scriptPreprocessor": "<rootDir>/node_modules/babel-jest",
+    "unmockedModulePathPatterns": [
+      "<rootDir>/node_modules/react",
+      "<rootDir>/node_modules/react-dom",
+      "<rootDir>/node_modules/react-addons-test-utils"
+    ],
+    "testDirectoryName": "test",
+    "testFileExtensions": [
+      "js",
+      "jsx"
+    ]
   },
   "repository": {
     "type": "git",
@@ -22,14 +35,17 @@
   "devDependencies": {
     "babel-core": "^6.1.2",
     "babel-eslint": "^4.1.4",
+    "babel-jest": "^5.3.0",
     "babel-loader": "^6.0.1",
     "babel-preset-es2015": "^6.1.2",
     "babel-preset-react": "^6.1.2",
     "eslint": "^1.9.0",
     "eslint-config-airbnb": "^1.0.0",
     "eslint-plugin-react": "^3.8.0",
+    "jest-cli": "^0.7.1",
     "node-sass": "^3.4.1",
     "react": "^0.14.2",
+    "react-addons-test-utils": "^0.14.2",
     "react-dom": "^0.14.2",
     "sass-loader": "^3.1.1",
     "webpack": "^1.12.3",
