--- a/package.json
+++ b/package.json
@@ -7,20 +7,7 @@
     "lint": "eslint -c .eslintrc public src --ext .js,.jsx",
     "build": "webpack --progress --colors",
     "start": "webpack-dev-server --progress --colors --content-base public",
-    "test": "jest --watch"
-  },
-  "jest": {
-    "scriptPreprocessor": "<rootDir>/node_modules/babel-jest",
-    "unmockedModulePathPatterns": [
-      "<rootDir>/node_modules/react",
-      "<rootDir>/node_modules/react-dom",
-      "<rootDir>/node_modules/react-addons-test-utils"
-    ],
-    "testDirectoryName": "test",
-    "testFileExtensions": [
-      "js",
-      "jsx"
-    ]
+    "test": "karma start"
   },
   "repository": {
     "type": "git",
@@ -35,14 +22,20 @@
   "devDependencies": {
     "babel-core": "^6.1.2",
     "babel-eslint": "^4.1.4",
-    "babel-jest": "^5.3.0",
     "babel-loader": "^6.0.1",
     "babel-preset-es2015": "^6.1.2",
     "babel-preset-react": "^6.1.2",
+    "chai": "^3.4.1",
     "eslint": "^1.9.0",
     "eslint-config-airbnb": "^1.0.0",
     "eslint-plugin-react": "^3.8.0",
-    "jest-cli": "^0.7.1",
+    "karma": "^0.13.15",
+    "karma-chrome-launcher": "^0.2.1",
+    "karma-cli": "^0.1.1",
+    "karma-mocha": "^0.2.0",
+    "karma-sourcemap-loader": "^0.3.6",
+    "karma-webpack": "^1.7.0",
+    "mocha": "^2.3.3",
     "node-sass": "^3.4.1",
     "react": "^0.14.2",
     "react-addons-test-utils": "^0.14.2",
