Use --inline --hot for webpack
Updates the bundle and refreshes the page when code changes.
`--hot` adds the plugin automatically, hence the removal in code.

https://webpack.github.io/docs/webpack-dev-server.html

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "eslint -c .eslintrc public src --ext .js,.jsx",
     "build": "webpack --progress --colors",
-    "start": "webpack-dev-server --progress --colors --content-base public",
+    "start": "webpack-dev-server --inline --hot --progress --colors --content-base public",
     "test": "karma start"
   },
   "repository": {
