--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "karma-webpack": "^1.7.0",
     "mocha": "^2.3.3",
     "node-sass": "^3.4.1",
+    "normalize.css": "^3.0.3",
     "react": "^0.14.2",
     "react-addons-test-utils": "^0.14.2",
     "react-dom": "^0.14.2",
