--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "react-simple-boilerplate",
   "version": "0.0.1",
-  "description": "Boilerplate repo for starting ReactJS apps. Mostly for personal use and sandboxing.",
-  "main": "src/app.js",
+  "description": "Boilerplate repo for starting ReactJS apps.",
+  "main": "views",
   "scripts": {
-    "lint": "eslint -c .eslintrc public src --ext .js,.jsx",
+    "lint": "eslint ./*.js? public views --ext .js,.jsx",
     "build": "webpack --progress --colors",
     "start": "webpack-dev-server --inline --hot --progress --colors --content-base public",
     "test": "karma start"
