Make HelloWorld a 'presentational component'
Instead of a 'container'.
http://rackt.org/redux/docs/basics/UsageWithReact.html

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Boilerplate repo for starting ReactJS apps.",
   "main": "views",
   "scripts": {
-    "lint": "eslint ./*.js? public views --ext .js,.jsx",
+    "lint": "eslint ./*.js? public redux views --ext .js,.jsx",
     "build": "webpack --progress --colors",
     "start": "webpack-dev-server --inline --hot --progress --colors --content-base public",
     "test": "karma start"
