Use Sinon spy in HelloWorld test
With hacky workaround because Sinon doesn't currently
play well with Webpack.
https://github.com/webpack/webpack/issues/304

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "karma-chrome-launcher": "^0.2.1",
     "karma-cli": "^0.1.1",
     "karma-mocha": "^0.2.0",
+    "karma-sinon-chai": "^1.1.0",
     "karma-sourcemap-loader": "^0.3.6",
     "karma-webpack": "^1.7.0",
     "mocha": "^2.3.3",
@@ -46,6 +47,8 @@
     "react-redux": "^4.0.0",
     "redux": "^3.0.4",
     "sass-loader": "^3.1.1",
+    "sinon": "^1.17.2",
+    "sinon-chai": "^2.8.0",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.3",
     "webpack-dev-server": "^1.12.1",
