--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "eslint ./*.js? public redux views --ext .js,.jsx",
     "build": "webpack --progress --colors",
-    "start": "webpack-dev-server --inline --hot --progress --colors --content-base public",
+    "start": "node server/server.js",
     "test": "karma start"
   },
   "repository": {
@@ -44,6 +44,7 @@
     "react": "^0.14.2",
     "react-addons-test-utils": "^0.14.2",
     "react-dom": "^0.14.2",
+    "react-hot-loader": "^1.3.0",
     "react-redux": "^4.0.0",
     "redux": "^3.0.4",
     "sass-loader": "^3.1.1",
