--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-hot-loader": "^1.3.0",
     "react-redux": "^4.0.0",
     "redux": "^3.0.4",
+    "redux-devtools": "^2.1.5",
     "sass-loader": "^3.1.1",
     "sinon": "^1.17.2",
     "sinon-chai": "^2.8.0",
