--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
     "react-hot-loader": "^1.3.0",
     "react-redux": "^4.0.0",
     "redux": "^3.0.4",
-    "redux-devtools": "^2.1.5",
+    "redux-devtools": "^3.0.1",
+    "redux-devtools-dock-monitor": "^1.0.1",
+    "redux-devtools-log-monitor": "^1.0.2",
     "sass-loader": "^3.1.1",
     "sinon": "^1.17.2",
     "sinon-chai": "^2.8.0",
