--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "karma-mocha": "^0.2.0",
     "karma-sourcemap-loader": "^0.3.6",
     "karma-webpack": "^1.7.0",
+    "lodash": "^4.0.0",
     "mocha": "^2.3.3",
     "node-sass": "^3.4.1",
     "normalize.css": "^3.0.3",
