--- a/.eslintrc
+++ b/.eslintrc
@@ -8,7 +8,12 @@
   "rules": {
     "no-use-before-define": [2, "nofunc"],
     "new-cap": [2, {"capIsNewExceptions": [
-      "List"
-    ]}]
+      "List" // Immutable.js
+    ]}],
+    "no-console": 0,
+    "object-shorthand": 0,
+    "arrow-body-style": 0,
+    "no-nested-ternary": 0,
+    "react/jsx-no-bind": 0
   }
 }
