--- a/package.json
+++ b/package.json
@@ -21,36 +21,38 @@
   "homepage": "https://github.com/cooperka/react-simple-boilerplate#readme",
   "devDependencies": {
     "babel-core": "^6.1.2",
-    "babel-eslint": "^4.1.4",
+    "babel-eslint": "^6.1.2",
     "babel-loader": "^6.0.1",
     "babel-preset-es2015": "^6.1.2",
     "babel-preset-react": "^6.1.2",
     "chai": "^3.4.1",
-    "css-loader": "^0.23.0",
-    "eslint": "^1.9.0",
-    "eslint-config-airbnb": "^3.1.0",
-    "eslint-plugin-react": "^3.8.0",
+    "css-loader": "^0.24.0",
+    "eslint": "^3.3.1",
+    "eslint-config-airbnb": "^10.0.1",
+    "eslint-plugin-import": "^1.14.0",
+    "eslint-plugin-jsx-a11y": "^2.1.0",
+    "eslint-plugin-react": "^6.1.2",
     "immutable": "^3.7.5",
-    "karma": "^0.13.15",
-    "karma-chrome-launcher": "^0.2.1",
-    "karma-cli": "^0.1.1",
-    "karma-mocha": "^0.2.0",
+    "karma": "^1.2.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-cli": "^1.0.1",
+    "karma-mocha": "^1.1.1",
     "karma-sinon-chai": "^1.1.0",
     "karma-sourcemap-loader": "^0.3.6",
     "karma-webpack": "^1.7.0",
-    "mocha": "^2.3.3",
+    "mocha": "^3.0.2",
     "node-sass": "^3.4.1",
-    "normalize.css": "^3.0.3",
-    "react": "^0.14.2",
-    "react-addons-test-utils": "^0.14.2",
-    "react-dom": "^0.14.2",
+    "normalize.css": "^4.2.0",
+    "react": "^15.3.1",
+    "react-addons-test-utils": "^15.3.1",
+    "react-dom": "^15.3.1",
     "react-hot-loader": "^1.3.0",
     "react-redux": "^4.0.0",
     "redux": "^3.0.4",
     "redux-devtools": "^3.0.1",
     "redux-devtools-dock-monitor": "^1.0.1",
     "redux-devtools-log-monitor": "^1.0.2",
-    "sass-loader": "^3.1.1",
+    "sass-loader": "^4.0.0",
     "sinon": "^1.17.2",
     "sinon-chai": "^2.8.0",
     "style-loader": "^0.13.0",
