--- a/package.json
+++ b/package.json
@@ -20,44 +20,44 @@
   },
   "homepage": "https://github.com/cooperka/react-simple-boilerplate#readme",
   "devDependencies": {
-    "babel-core": "^6.1.2",
-    "babel-eslint": "^6.1.2",
-    "babel-loader": "^6.0.1",
-    "babel-preset-es2015": "^6.1.2",
-    "babel-preset-react": "^6.1.2",
-    "chai": "^3.4.1",
-    "css-loader": "^0.24.0",
-    "eslint": "^3.3.1",
-    "eslint-config-airbnb": "^10.0.1",
-    "eslint-plugin-import": "^1.14.0",
-    "eslint-plugin-jsx-a11y": "^2.1.0",
-    "eslint-plugin-react": "^6.1.2",
-    "immutable": "^3.7.5",
-    "karma": "^1.2.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-cli": "^1.0.1",
-    "karma-mocha": "^1.1.1",
-    "karma-sinon-chai": "^1.1.0",
-    "karma-sourcemap-loader": "^0.3.6",
-    "karma-webpack": "^1.7.0",
-    "mocha": "^3.0.2",
-    "node-sass": "^3.4.1",
-    "normalize.css": "^4.2.0",
-    "react": "^15.3.1",
-    "react-addons-test-utils": "^15.3.1",
-    "react-dom": "^15.3.1",
-    "react-hot-loader": "^1.3.0",
-    "react-redux": "^4.0.0",
-    "redux": "^3.0.4",
-    "redux-devtools": "^3.0.1",
-    "redux-devtools-dock-monitor": "^1.0.1",
-    "redux-devtools-log-monitor": "^1.0.2",
-    "sass-loader": "^4.0.0",
-    "sinon": "^1.17.2",
-    "sinon-chai": "^2.8.0",
-    "style-loader": "^0.13.0",
-    "webpack": "^1.12.3",
-    "webpack-dev-server": "^1.12.1",
-    "webpack-hot-middleware": "^2.4.1"
+    "babel-core": "~6.14.0",
+    "babel-eslint": "~6.1.2",
+    "babel-loader": "~6.2.5",
+    "babel-preset-es2015": "~6.14.0",
+    "babel-preset-react": "~6.11.1",
+    "chai": "~3.5.0",
+    "css-loader": "~0.24.0",
+    "eslint": "~3.4.0",
+    "eslint-config-airbnb": "~10.0.1",
+    "eslint-plugin-import": "~1.14.0",
+    "eslint-plugin-jsx-a11y": "~2.2.0",
+    "eslint-plugin-react": "~6.1.2",
+    "immutable": "~3.8.1",
+    "karma": "~1.2.0",
+    "karma-chrome-launcher": "~2.0.0",
+    "karma-cli": "~1.0.1",
+    "karma-mocha": "~1.1.1",
+    "karma-sinon-chai": "~1.2.3",
+    "karma-sourcemap-loader": "~0.3.6",
+    "karma-webpack": "~1.8.0",
+    "mocha": "~3.0.2",
+    "node-sass": "~3.8.0",
+    "normalize.css": "~4.2.0",
+    "react": "~15.3.1",
+    "react-addons-test-utils": "~15.3.1",
+    "react-dom": "~15.3.1",
+    "react-hot-loader": "~1.3.0",
+    "react-redux": "~4.4.5",
+    "redux": "~3.5.2",
+    "redux-devtools": "~3.3.1",
+    "redux-devtools-dock-monitor": "~1.1.1",
+    "redux-devtools-log-monitor": "~1.0.2",
+    "sass-loader": "~4.0.0",
+    "sinon": "~1.17.2",
+    "sinon-chai": "~2.8.0",
+    "style-loader": "~0.13.0",
+    "webpack": "~1.13.2",
+    "webpack-dev-server": "~1.15.0",
+    "webpack-hot-middleware": "~2.12.2"
   }
 }
