--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "lint": "eslint *.js *.jsx client server redux --ext .js,.jsx",
     "build": "webpack --progress --colors",
     "start": "node server",
-    "test": "karma start"
+    "test": "karma start",
+    "test:travis": "karma start --single-run --browsers PhantomJS"
   },
   "keywords": [
     "react",
@@ -61,7 +62,9 @@
     "karma": "~1.4.0",
     "karma-chrome-launcher": "~2.0.0",
     "karma-cli": "~1.0.1",
+    "karma-firefox-launcher": "~1.0.0",
     "karma-mocha": "~1.3.0",
+    "karma-phantomjs-launcher": "~1.0.2",
     "karma-sinon-chai": "~1.2.4",
     "karma-sourcemap-loader": "~0.3.7",
     "karma-webpack": "~2.0.1",
