--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "babel-loader": "~6.2.10",
     "babel-preset-es2015": "~6.22.0",
     "babel-preset-react": "~6.22.0",
+    "babel-preset-stage-3": "~6.22.0",
     "chai": "~3.5.0",
     "eslint": "~3.14.1",
     "eslint-config-airbnb": "~14.0.0",
